--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "optimist": "~0.6.0",
     "gossipmonger": "~0.1.10",
     "request": "~2.27.0",
-    "jade": "~0.35.0"
+    "jade": "~0.35.0",
+    "poolee": "~0.4.9"
   },
   "devDependencies": {},
   "scripts": {
